# affirmation

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
etc/: Makefile.am  affirmation
src/: Makefile.am  main.c  notification.c  notification.h
